--- a/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
+++ b/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/FluentDialog.xaml
@@ -1,4 +1,4 @@
-<Window
+﻿<Window
     x:Class="PSADT.UserInterface.Dialogs.Fluent.FluentDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -436,6 +436,13 @@
                         Text=""
                         TextAlignment="Left"
                         TextWrapping="Wrap"
+                        />
+
+                    <PasswordBox
+                        x:Name="InputBoxPassword"
+                        Margin="16,16,16,16"
+                        AutomationProperties.Name="SecureInputBox"
+                        Visibility="Collapsed"
                         />
                 </ikw:SimpleStackPanel>
 
