Wire up UI to use initial selection and localized heading

--- a/src/PSADT/PSADT.UserInterface/Interfaces/Fluent/FluentDialog.xaml
+++ b/src/PSADT/PSADT.UserInterface/Interfaces/Fluent/FluentDialog.xaml
@@ -470,7 +470,7 @@
                             Margin="16,0,16,0"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
-                            Text="Please Select"
+                            Text="Select an item:"
                             TextWrapping="WrapWithOverflow"
                             />
 
